--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
-    hiii hello rrr
-</head>
-</html
+    <title>HAI</title>
+   </head>
+    <BODY>
+    <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil sit eos delectus fugiat distinctio est expedita culpa placeat eligendi incidunt, aliquid tempore odio a, ea explicabo aspernatur sed ullam itaque.</P>
+    </BODY>
+</html>
