--- a/layoutt.html
+++ b/layoutt.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HAI</title>
+        <title>layout page</title>
     </head>
-    <BODY>
-        welcome to html
-        <hr></hr>
-       <nav>navigation</nav> 
-       <header>Header section</header>
-       <aside>side bar</aside>
-         <main>
-            <h1></h1>
-            <p>hello html</p>
-            <section>
-                <article>article</article>
-            </section>
-         </main>
-            <details>
-                <summary>
-                    html
-                </summary>
-            </details>
-        <footer>
-            footer section
-        </footer>
-    </BODY>
+    <body>
+        <h1>Html Layouts</h1>
+        <p>Html is a hypertext markup language ,not case sensitive</p><br>
+        <b>It is the skelton of a website</b><br>
+        <strong>Css is the skin</strong><br>
+        <i>javascript is the function</i><br>
+        <em>java always a simple and powerfull language</em><br>
+        <u>we studying about html,css and javascript</u><br>
+        <mark>marking is important</mark><br>
+        <q>quoting is a simple step</q><br>
+        <img src="download.jpg" alt="coding" class="images" title="coding">
+        <nav>Navigation</nav>
+        <header>IT is the header section</header>
+        <aside>side bar</aside>
+        <main>
+             <section>
+                <article>article displays that the article which includes in the html pages....</article></article>
+             </section>
+        </main>
+        <details>
+            <summary>html markup language</summary>
+        </details>
+    </body>
 </html>
