--- a/layoutt.html
+++ b/layoutt.html
@@ -5,19 +5,32 @@
     </head>
     <body>
        
-        <h1>Html Layouts</h1>
+        <h1>Html</h1>
+         <h1>css</h1>
+          <h1>javascript</h1>
          <hr></hr>
-        <p>Html is a hypertext markup language ,not case sensitive</p><br>
-        <b>It is the skelton of a website</b><br>
-        <strong>Css is the skin</strong><br>
-        <i>javascript is the function</i><br>
-        <em>java always a simple and powerfull language</em><br>
-        <u>we studying about html,css and javascript</u><br>
-        <mark>marking is important</mark><br>
+        <p>Html is a hypertext markup language ,not case sensitive</p>
+        <p>Html is a hypertext markup language ,not case sensitive</p>
+        <p>Html is a hypertext markup language ,not case sensitive</p>
+        
+        <b>It is the skelton of a website</b>
+        <strong>Css is the skin</strong>
+        <i>javascript is the function</i>
+        <em>java always a simple and powerfull languagewe studying about html,css and javascript
+       marking is important</em>
         <q>quoting is a simple step</q><br>
+        <img src="download.jpg" height="200" width="200" alt="coding" class="images" title="coding">
+        <img src="download.jpg"  height="100" width="200" alt="coding" class="images" title="coding">
+        <img src="download.jpg"  height="200" width="100" alt="coding" class="images" title="coding">
         <img src="download.jpg" alt="coding" class="images" title="coding">
         <nav>Navigation</nav>
+         <nav>Navigation</nav> <nav>Navigation</nav>
         <header>IT is the header section</header>
+        <header>IT is the header section</header>
+        <header>IT is the header section</header>
+        <div>divisioning the part</div>
+        <div>divisioning the part</div>
+        <div>divisioning the part</div>
         <aside>side bar</aside>
         <main>
              <section>
